--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
+    "cors": "~2.8.4",
+    "multer": "~1.3.0",
     "express": "~4.14.1",
     "mongoose": "^4.13.5",
     "morgan": "~1.7.0",
